# actix-template

./: Cargo.toml  README.md
backup/: user.sql
config/: local.toml  prod.toml
docker/: docker-compose.yaml
src/: constants.rs  lib.rs  main.rs
src/app/: state.rs
src/config/: config.rs
src/db/: mod.rs  mysql.rs  redis.rs
src/handlers/: health.rs  user.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: user.rs
src/routes/: health.rs  mod.rs  user.rs
src/tpl/: message.rs  mod.rs  redis_key.rs
src/utils/: error_code.rs  logger.rs  mod.rs  response.rs  utils.rs
tests/: utils.rs
