[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.11.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [ "mysql", "runtime-tokio-native-tls" ] }
deadpool-redis = { version = "0.22.0" }
tokio = { version = "1", features = ["full"] }
config = "0.15.13"
urlencoding = "2.1.3"
ethers = { version="2.0.14" }
chrono = { version="0.4.41",features = ["serde"]}
jsonwebtoken = "9.3.1"
tracing-subscriber = { version="0.3.19",features = ["json", "env-filter","chrono"]}
tracing-appender = "0.2.3"
tracing = "0.1.41"
once_cell = "1.21.3"
parking_lot = "0.12.4"
tracing-actix-web = "0.7.19"
rand = { version="0.8.5"}
futures = "0.3.31"
actix-service = "2.0.3"
futures-util = "0.3.31"
redis = { version = "0.32.4", features = ["tokio-comp"] }
